# trials

./: .gitignore  readme.md
AppDev/Trials/: settings.gradle.kts
AppDev/Trials/app/: build.gradle.kts
AppDev/Trials/app/src/main/: AndroidManifest.xml
AppDev/Trials/app/src/main/java/com/example/trials/: HomeActivity.kt  (+2 more)
AppDev/Trials/app/src/main/res/layout/: activity_home.xml  activity_main.xml  activity_sign_up.xml
AppDev/Trials/app/src/main/res/values/: strings.xml  themes.xml
AppDev/Trials/app/src/main/res/values-night/: themes.xml
AppDev/Trials/gradle/wrapper/: gradle-wrapper.properties
AppDev/Trials/hono-server/: package-lock.json  package.json
AppDev/Trials/hono-server/src/: index.ts
curl/: README.md  gemini_api_call.cpp
dlang/: TheDLang.md
dlang/Tpkeniser/: .gitignore  dub.json
dlang/Tpkeniser/source/: app.d  scanner.d  token.d  tokenType.d
dlang/dProject/: .gitignore  dub.json
dlang/dProject/source/: app.d
dlang/dProject/source/utils/: matrix.d
go/: fibonacciClosure.go  main  tryingGo.go
go/gosh/: go.mod  go.sum  gosh  main.go
raylib/FlippinBird/: CMakeLists.txt  build.sh
raylib/FlippinBird/include/: bird.h  obstacle.h
raylib/FlippinBird/raylib/: cmake_install.cmake
raylib/FlippinBird/src/: bird.cpp  main.cpp  obstacle.cpp
raylib/NumeroUno/: .clangd  readme.md
raylib/NumeroUno/raylib/: CTestTestfile.cmake  Makefile
raylib/NumeroUno/src/: main.cpp
raylib/SchedSim/: .clangd  CMakeLists.txt  build.sh
raylib/SchedSim/include/: Scheduler.h  uiutils.h
raylib/SchedSim/src/: main.cpp  scheduler.cpp  uiutils.cpp
